--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,14 +7,9 @@
 This is the top of the body.
   <div ng-app="myApp">
     <div ng-controller="jokes">
-      First Name:
-      <input type="text" ng-model="firstName" placeholder="Cypher">
-      <br> Last Name:
-      <input type="text" ng-model="lastName" placeholder="Hamtrotter">
-      <br>
+      <br> First Name: <input type="text" ng-model="firstName" placeholder="Cypher">
+      <br> Last Name: <input type="text" ng-model="lastName" placeholder="Hamtrotter"><br>
       <br> Full Name: {{firstName + " " + lastName}}
-      <br>ng-bind="lastName":
-      <span ng-bind="lastName"></span>
     </div>
   </div>
 </body>
