--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,8 +16,11 @@
         <a href="#/view1">View1</a>
         <a href="#/view2">View2</a>
       </nav>
+      <input type="text" ng-model="search" ng-model-options="{ debounce: 800 }" placeholder="Enter full movie name" />
       <div ng-view></div>
     </div>
+    <div id="main-info" ng-include="'partials/main-info.html'"></div>
+    <div id="view2" ng-include="'partials/view2.html'"></div>
   </body>
 
   </html>
