--- a/client/app/index.html
+++ b/client/app/index.html
@@ -19,8 +19,8 @@
       <input type="text" ng-model="search" ng-model-options="{ debounce: 800 }" placeholder="Enter full movie name" />
       <div ng-view></div>
     </div>
-    <div id="main-info" ng-include="'partials/main-info.html'"></div>
-    <div id="view2" ng-include="'partials/view2.html'"></div>
+<!--     <div id="main-info" ng-include="'partials/main-info.html'"></div>
+    <div id="view2" ng-include="'partials/view2.html'"></div> -->
   </body>
 
   </html>
