--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,4 +1,3 @@
-<!-- MODIFYING THIS FILE SHOULD BE UNNECESSARY -->
 <doctype! html>
   <html>
 
@@ -18,8 +17,8 @@
       </nav>
 
       <div ng-controller="view1Ctrl">
-        <input type="text" ng-model="search" placeholder="Enter full movie name" />
-        <button ng-click="go()" value="search">Search</button>
+        <input type="text" ng-model="search" placeholder="Enter message here" />
+        <button ng-click="go()" value="search">Send</button>
         <div ng-view></div>
       </div>
     </div>
