--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,8 +12,8 @@
   <body>
     <div ng-app="talkie">
       <nav>
-        <a href="#/view1">View1</a>
-        <a href="#/view2">View2</a>
+<!--         <a href="#/view1">View1</a>
+        <a href="#/view2">View2</a> -->
       </nav>
 
       <div ng-controller="view1Ctrl">
