--- a/client/app/view2/view2.html
+++ b/client/app/view2/view2.html
@@ -1,4 +1,4 @@
 <div ng-controller="view2Ctrl">
-View 2
+Eva is simple web application that lets you chat with a real AI across the internet. It was built by Nathanael Ligon using Angular, Node, and Express.
   <!-- <h1> {{ display }} </h1> -->
 </div>
