--- a/client/about/about.html
+++ b/client/about/about.html
@@ -1,4 +1,4 @@
-<div ng-controller="view2Ctrl">
+<div ng-controller="aboutCtrl">
 Eva is simple web application that lets you chat with a real AI across the internet. It was built by Nathanael Ligon using Angular, Node, and Express.
   <!-- <h1> {{ display }} </h1> -->
 </div>
