--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,8 @@
   <body>
     <div ng-app="talkie">
       <nav>
-<!--         <a href="#/chat">chat</a>
-        <a href="#/about">about</a> -->
+        <a href="#/chat">Chat</a>
+        <a href="#/about">About</a>
       </nav>
 
       <div ng-controller="chatCtrl">
