Prepare stylesheets, clean up code.

--- a/client/about/about.html
+++ b/client/about/about.html
@@ -1,4 +1,3 @@
 <div ng-controller="aboutCtrl">
-Eva is simple web application that lets you chat with a real AI across the internet. It was built by Nathanael Ligon using Angular, Node, and Express.
-  <!-- <h1> {{ display }} </h1> -->
+Eva is a web application that lets you chat with a real AI, named Eva, across the internet. It was built by Nathanael Ligon using Angular, Node, and Express.
 </div>
