--- a/client/index.html
+++ b/client/index.html
@@ -1,26 +1,26 @@
 <doctype! html>
-  <html>
+  <html ng-app="talkie">
+  <meta charset="utf-8" />
 
   <head>
+    <title>Eva</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  </head>
+
+  <body>
     <script src="lib/angular.js"></script>
     <script src="lib/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="chat/chat.js"></script>
     <script src="about/about.js"></script>
-  </head>
-
-  <body>
-    <div ng-app="talkie">
-      <nav>
-        <a href="#/chat">Chat</a>
-        <a href="#/about">About</a>
-      </nav>
-
-      <div ng-controller="chatCtrl">
-        <input type="text" ng-model="search" placeholder="Enter message here" />
-        <button ng-click="go()" value="search">Send</button>
-        <div ng-view></div>
-      </div>
+    <nav>
+      <a href="#/chat">Chat</a>
+      <a href="#/about">About</a>
+    </nav>
+    <div ng-controller="chatCtrl">
+      <input type="text" ng-model="search" placeholder="Enter message here" />
+      <button ng-click="go()" value="search">Send</button>
+      <div ng-view></div>
     </div>
   </body>
 
