--- a/client/chat/chat.html
+++ b/client/chat/chat.html
@@ -1,6 +1,6 @@
-<div ng-controller="chatCtrl">
+<div class="text" ng-controller="chatCtrl">
   <!-- chat -->
   <!-- <h1> {{ display }} </h1> -->
   <!-- <div id="main-info" ng-include="'chat/chat.html'" class="col-md-8"></div> -->
-  <h4> Eva: {{details}}</h4>
+  <span class="texty"> <h4>{{details}}</h4> </span>
 </div>
