--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
       <script src="app.js"></script>
       <script src="chat/chat.js"></script>
       <script src="about/about.js"></script>
+      <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
       <nav>
         <span class="uppertext">
       <a href="#/chat">Chat</a>
@@ -21,7 +22,7 @@
     </nav>
     </span>
         <div id="container" class=textarea ng-controller="chatCtrl">
-          <form>
+          <form class="thebox">
             <input type="text" ng-model="search" placeholder="Enter message here" />
             <button ng-click="go()" id="rec" class="btn" value="search">Send</button>
           </form>
